eks/service.yaml
apiVersion: v1 ## A kubernetes service is an abstract object that defines networking rules to comunicate from the outside to the pods
kind: Service
metadata:
  name: simplebank-service
spec:
  selector:
    app: simplebank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
